--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MC MIS Cafeteria Consulting </title>
     <div class="header"> 
-        <img src="MIS Group 13.jpg" alt="Your Logo" />
+        <img src="MIS Group 13.png" alt="Your Logo" />
     <div class="header-right"> 
         <a class="active" href="#home">Home</a>
         <a href="./services.html">Services</a>
